erDiagram
    USER {
        CHAR(36) id
        VARCHAR(255) first_name
        VARCHAR(255) last_name
        VARCHAR(255) email
        VARCHAR(255) password
        BOOLEAN is_admin
    }
    PLACE {
        CHAR(36) id
        VARCHAR(255) title
        TEXT description
        DECIMAL(10) price
        FLOAT latitude
        FLOAT longitude
        CHAR(36) owner_id
    }
    REVIEW {
        CHAR(36) id
        TEXT text
        INT rating
        CHAR(36) user_id
        CHAR(36) place_id
    }
    AMENITY {
        CHAR(36) id
        VARCHAR(255) name
    }
    PLACE_AMENITY {
        CHAR(36) place_id
        CHAR(36) amenity_id
    }

    USER ||--o{ PLACE : "owns"
    USER ||--o{ REVIEW : "writes"
    PLACE ||--o{ REVIEW : "receives"
    PLACE ||--o{ PLACE_AMENITY : "has"
    AMENITY ||--o{ PLACE_AMENITY : "belongs to"
